# 2026scan

./: .gitignore  README.md
.trae/: README.md
smart-diet-agent/: .env.example  README.md  docker-compose.yml  pyproject.toml
smart-diet-agent/data/: clean_off_data.py  init_db.sql
smart-diet-agent/frontend/: README.md  app.py
smart-diet-agent/src/agent/: graph.py  memory.py  prompts.py  tools.py
smart-diet-agent/src/api/: main.py  schemas.py
smart-diet-agent/src/api/routes/: diet.py
smart-diet-agent/src/common/: config.py  db.py  utils.py
smart-diet-agent/src/core/: nutrition_calc.py  recipe_engine.py  user_profile.py
