[tool.poetry]
name = "smart-diet-agent"
version = "1.0.0"
description = "智能饮食助手 - 基于大语言模型的个性化营养推荐系统"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Web框架
fastapi = "^0.110.0"
uvicorn = "^0.28.0"

# 数据库
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.9"
redis = "^5.0.0"

# 大语言模型
langchain = "^0.1.0"
langchain-openai = "^0.1.0"
langchain-community = "^0.0.20"
langgraph = "^0.0.20"

# 数据处理
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.0"

# 开发工具
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
